--- a/dynamic-excel-project/dynamic-excel/src/main/resources/templates/tab/regist/regist.html
+++ b/dynamic-excel-project/dynamic-excel/src/main/resources/templates/tab/regist/regist.html
@@ -5,7 +5,7 @@
 
 <body>
     <!-- データ登録タブコンテンツ -->
-    <div th:fragment="content" class="container-fruid m-0 p-0 h-100">
+    <div th:fragment="content" class="container-fluid m-0 p-0 h-100">
         <!-- コンテンツ中央に表示 -->
         <div class="row justify-content-center align-items-center h-100">
             <div class="col-6">
