--- a/dynamic-excel-project/dynamic-excel/src/main/resources/templates/tab/search/contents/list.html
+++ b/dynamic-excel-project/dynamic-excel/src/main/resources/templates/tab/search/contents/list.html
@@ -5,7 +5,7 @@
 </head>
 
 <body>
-    <table class="table table-bordered table-hover" th:fragment="content" id="search-list">
+    <table class="table table-bordered table-hover text-center" th:fragment="content" id="search-list">
         <thead class="thead-dark" id="search-list-header">
             <tr>
                 <th scope="col">ID</th>
