--- a/dynamic-excel-project/dynamic-excel/src/main/resources/templates/common/include.html
+++ b/dynamic-excel-project/dynamic-excel/src/main/resources/templates/common/include.html
@@ -8,6 +8,8 @@
     <script th:src="@{/js/search/condition.js}" type="module"></script>
     <script th:src="@{/js/regist/regist.js}" type="module"></script>
     <script th:src="@{/js/import/import.js}" type="module"></script>
+    <script th:src="@{/lib/jquery.binarytransport.js}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/file-saver@2.0.4/dist/FileSaver.min.js"></script>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" th:href="@{/css/common.css}">
