--- a/dynamic-excel-client/src/assets/css/dynamic-excel.scss
+++ b/dynamic-excel-client/src/assets/css/dynamic-excel.scss
@@ -1,10 +1,32 @@
-// スクロールバーの幅を細くする
-// ::-webkit-scrollbar {
-//   width: 10px;
-// }
-
-html, body {
+html,
+body {
   overflow: auto;
+}
+
+/* メインコンテンツ下の高さを100%にする */
+.dynamic_excel_main {
+  height: 100% !important;
+  padding: 0px !important;
+}
+
+.dynamic_excel_main {
+  .row,
+  .col,
+  .v-card {
+    height: inherit;
+  }
+}
+
+.v-tabs-items {
+  height: 100% !important;
+}
+
+.v-tabs-items {
+  .v-window__container,
+  .v-window-item,
+  .v__tab__contents__frame {
+    height: 100% !important;
+  }
 }
 
 // 入力系のdisabled時に背景をグレーアウトさせる
@@ -49,6 +71,18 @@ html, body {
   }
 }
 
+// .v-input {
+//   .v-input__control {
+//     .v-text-field__details {
+//       min-height: 0px;
+//       margin-bottom: 0px;
+//       .v-messages {
+//         min-height: 0px;
+//       }
+//     }
+//   }
+// }
+
 // テーブルをストライプにする(いくつか用意)
 .table-striped {
   table tr th {
@@ -61,8 +95,12 @@ html, body {
 }
 
 // v-container直下のrowのmargin-12pxを消す
-.container--fluid {
-  > .row {
-    margin: 0 !important;
-  }
+// .container--fluid {
+//   > .row {
+//     margin: 0 !important;
+//   }
+// }
+
+.row + .row {
+  margin-top: 0px;
 }
